nav-bar__nav-link con HOVER

--- a/index.html
+++ b/index.html
@@ -13,28 +13,31 @@
         <nav class="nav-bar">
           <ul class="nav-bar__nav-list">
             <li class="nav-bar__nav-item">
-              <a href="#" class="nav-bar__nav-link">Inicio</a>
+              <a href="#" class="nav-bar__nav-link">INICIO</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="#" class="nav-bar__nav-link">Alta</a>
+              <a href="#" class="nav-bar__nav-link">ALTA</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="#" class="nav-bar__nav-link">Nosotros</a>
+              <a href="#" class="nav-bar__nav-link">NOSOTROS</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="#" class="nav-bar__nav-link">Contacto</a>
+              <a href="/views/contacto.html" class="nav-bar__nav-link">CONTACTO</a> <!--! ACA LE PUSE EL LINK DE CONTACTO PARA VER LA PAG -->
             </li>
           </ul>
         </nav> <!-- .nav-bar -->
   
         <div class="search-bar">
-          <div class="search-bar__logo-container">Logo</div>
+          <div class="search-bar__logo-container">
+            <img src="/public/img/CONSTRUNORT-01.svg" alt="">
+
+          </div>
           <form action="#" class="search-bar__form-container">
             <label for="busqueda" class="search-bar__form-label">Buscar</label>
             <input type="search" class="search-bar__form-search" id="busqueda">
             <input type="submit" class="search-bar__form-submit" value="Buscar">
           </form>
-          <div class="search-bar__carrito-container">C</div>
+          <div class="search-bar__carrito-container">Carrito</div>
           <div class="menu-toogle">
             <label for="menu" class="menu-toogle__label">
               <span class="menu-toogle__top-bread"></span>
