--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
           </div>
           <form action="#" class="search-bar__form-container">
-            <label for="busqueda" class="search-bar__form-label">Buscar</label>
-            <input type="search" class="search-bar__form-search" id="busqueda">
-            <input type="submit" class="search-bar__form-submit" value="Buscar">
+            <!-- <label for="busqueda" class="search-bar__form-label">Buscar</label> -->
+            <input type="search" class="search-bar__form-search" id="busqueda" placeholder="Buscar productos y más...">  <!-- TODO -->
+            <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          <!--TODO -->
           </form>
           <div class="search-bar__carrito-container">Carrito</div>
           <div class="menu-toogle">
