--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Proyecto Integrador - Inicio</title>
 </head>
 <body>
@@ -30,14 +31,13 @@
         <div class="search-bar">
           <div class="search-bar__logo-container">
             <img src="/public/img/CONSTRUNORT-01.svg" alt="">
-
           </div>
           <form action="#" class="search-bar__form-container">
             <!-- <label for="busqueda" class="search-bar__form-label">Buscar</label> -->
             <input type="search" class="search-bar__form-search" id="busqueda" placeholder="Buscar productos y más...">  <!-- TODO -->
-            <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          <!--TODO -->
+              <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          <!--TODO -->
           </form>
-          <div class="search-bar__carrito-container">Carrito</div>
+          <div class="search-bar__carrito-container"><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
           <div class="menu-toogle">
             <label for="menu" class="menu-toogle__label">
               <span class="menu-toogle__top-bread"></span>
