imágenes de pintura e impermeabilización en public

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           </div>
           <form action="#" class="search-bar__form-container">
             <!-- <label for="busqueda" class="search-bar__form-label">Buscar</label> -->
-            <input type="search" class="search-bar__form-search" id="busqueda" placeholder="Buscar productos y más...">  <!-- TODO -->
-              <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          <!--TODO -->
+            <input type="search" class="search-bar__form-search" id="busqueda" placeholder="Buscar productos y más...">  
+              <input type="submit" class="search-bar__form-submit" value="BUSCAR">                                          
           </form>
           <div class="search-bar__carrito-container"><i class="fa-solid fa-cart-shopping fa-lg"></i></div>
           <div class="menu-toogle">
@@ -52,9 +52,9 @@
       <main>
         <section class="section-cards">
           <header class="section-cards__header">
-            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-            <p>Se encontraron X productos</p>
-          </header>
+            <h1 class="section-cards__header-h1">Artículos más vendidos!</h1>    
+            <p class="section-cards__header-p">Herramientas de mano</p>                    
+          </header> <!-- .section-cards-->
         
         
           <div class="cards-container">
@@ -62,92 +62,191 @@
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="img/apple-iphone-11-pro-max.jpg" alt="Iphone 11 Pro Max" class="card__image">
+                  <img src="img/amoladora.webp" alt="Amoladora Angular Class 115mm 800w CAA800W" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Iphone 11 Pro Max</h2>
+                  <h2 class="card__heading">Amoladora Angular 800w</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$50.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS </h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 1-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/apple-iphone-12.jpg" alt="IPhone 12" class="card__image">
+                  <img src="/public/img/sierra-caladora.webp" alt="Sierra Caladora Class Variable 55mm 400w 220v" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">IPhone 12</h2>
+                  <h2 class="card__heading">Sierra Caladora 400w 220v</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 2-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/camara-canon.jpg" alt="Camara Canon" class="card__image">
+                  <img src="/public/img/sierra-circular.webp" alt="Sierra Circular Bosch 1500w 184 mm Disco 7 1/4" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Camara Canon</h2>
+                  <h2 class="card__heading">Sierra Circular Disco 7 1/4</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$68.000</h3>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 3-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/samsung-galaxy-s21-plus-5g.jpg" alt="Celular Samsung" class="card__image">
+                  <img src="/public/img/caja-herramientas.webp" alt="Celular Samsung" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Celular Samsung</h2>
+                  <h2 class="card__heading"> Caja de Herramientas + Set de 85 Piezas Kendo</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$50.000</h3>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 4-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/chromecast-google.jpg" alt="Choromecast" class="card__image">
+                  <img src="/public/img/grupo-electrogeno.webp" alt="Choromecast" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Choromecast</h2>
+                  <h2 class="card__heading">Grupo Electrógeno 2200w Hyundai</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 5-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/dji-mavic-2-pro.jpg" alt="DJI Mavic 2 Pro" class="card__image">
+                  <img src="/public/img/soldadora-lusqtoff.webp" alt="Soldadora Inverter Lüsqtoff" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">DJI Mavic 2 Pro</h2>
+                  <h2 class="card__heading">Soldadora Inverter Lüsqtoff</h2>
                   <div class="card__description">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis error fugiat placeat facere quasi illum?</p>
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS </h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card -->
+            </div> <!-- .card 6-->
+
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/public/img/taladro-percutor.webp" alt="Taladro Percutor Inalámbrico 12v" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Taladro Percutor Inalámbrico 12v</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card 7-->
   
           </div>
   
         </section> <!-- .section-cards -->
+
+        <section class="section-cards"> <!-- .section-cards2 COMIENZO-->
+          <header class="section-cards__header">
+            <h1 class="section-cards__header-h1">Productos destacados en alquiler!</h1>    
+          </header> <!-- .section-cards-->
+          <div class="cards-container">
+
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="img/amoladora.webp" alt="Amoladora Angular Class 115mm 800w CAA800W" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Amoladora Angular 800w</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$50.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS </h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card 1-->
+  
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/public/img/sierra-caladora.webp" alt="Sierra Caladora Class Variable 55mm 400w 220v" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Sierra Caladora 400w 220v</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card 2-->
+  
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/public/img/sierra-circular.webp" alt="Sierra Circular Bosch 1500w 184 mm Disco 7 1/4" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Sierra Circular Disco 7 1/4</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$68.000</h3>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card 3-->
+
+
+
+
+
+
+
+
+
+
+          </div>
+
+
+
+
+
+
+        </section>  <!-- ! section-cards2 -->
+
+
+
       </main>
 
+      <footer class="footer">
+        <h3>soy un footer en un h3</h3>
+        <h3>soy un footer en un h3</h3>
+        <h3>soy un footer en un h3</h3>
+        <h3>soy un footer en un h3</h3>
+      </footer>
 
     <script type="module" src="/main.js"></script>
 </body>
