Commit de prueba

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                   <div class="card__description">
                     <h3 class="card__description-h3">$50.000</h3>
                     <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
-                    <h4 class="card__description-h4-2">ENVIO GRATIS </h4>
+                    <h4 class="card__description-h4-2">ENVIO</h4>
                   </div>
                 </div>
               </article>
