Segundo commit de prueba

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <section class="section-cards"> <!-- .section-cards2 COMIENZO-->
           <header class="section-cards__header">
-            <h1 class="section-cards__header-h1">Productos destacados en alquiler!</h1>    
+            <h1 class="section-cards__header-h1">Productos destacados en alquiler</h1>    
           </header> <!-- .section-cards-->
           <div class="cards-container">
 
