--- a/index.html
+++ b/index.html
@@ -168,56 +168,110 @@
   
         </section> <!-- .section-cards -->
 
-        <section class="section-cards"> <!-- .section-cards2 COMIENZO-->
+        <section class="section-cards"> <!--! .section-cards2 COMIENZO-->
           <header class="section-cards__header">
-            <h1 class="section-cards__header-h1">Productos destacados en alquiler</h1>    
+            <h2 class="section-cards__header-h2">Pintura</h2>    
           </header> <!-- .section-cards-->
           <div class="cards-container">
 
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="img/amoladora.webp" alt="Amoladora Angular Class 115mm 800w CAA800W" class="card__image">
+                  <img src="public/img/pintura/ecolatex20L-enduido-fijador-rodillo.webp" alt="Ecolatex + Enduido + Fijador + Rodillo" class="card__image">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Amoladora Angular 800w</h2>
+                  <h2 class="card__heading">Ecolatex + Enduido + Fijador + Rodillo</h2>
                   <div class="card__description">
                     <h3 class="card__description-h3">$50.000</h3>
                     <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
-                    <h4 class="card__description-h4-2">ENVIO</h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card 1-->
+            </div> <!-- .card Pintura 1-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/sierra-caladora.webp" alt="Sierra Caladora Class Variable 55mm 400w 220v" class="card__image">
+                  <img src="/img/pintura/esmalte-satinado-tersuave.webp" alt="Esmalte satinado tersuave" class="card__image img-grande">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Sierra Caladora 400w 220v</h2>
+                  <h2 class="card__heading">Esmalte satinado tersuave</h2>
                   <div class="card__description">
                     <h3 class="card__description-h3">$55.000</h3>
                     <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card 2-->
+            </div> <!-- .card Pintura 2-->
   
             <div class="card">
               <article class="card__article">
                 <div class="card__image-container">
-                  <img src="/public/img/sierra-circular.webp" alt="Sierra Circular Bosch 1500w 184 mm Disco 7 1/4" class="card__image">
+                  <img src="/public/img/pintura/latex-ext-bermellon.mate.webp" alt="Látex exterior bermellón" class="card__image img-grande">
                 </div>
                 <div class="card__content">
-                  <h2 class="card__heading">Sierra Circular Disco 7 1/4</h2>
+                  <h2 class="card__heading">Látex exterior bermellón</h2>
                   <div class="card__description">
                     <h3 class="card__description-h3">$68.000</h3>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS</h4>
                   </div>
                 </div>
               </article>
-            </div> <!-- .card 3-->
+            </div> <!-- .card  Pintura3-->
+
+
+        <section class="section-cards"> <!-- .section-cards2 COMIENZO-->
+          <header class="section-cards__header">
+            <h2 class="section-cards__header-h2">Impermeabilización</h2>    
+          </header> <!-- .section-cards-->
+          <div class="cards-container">
+
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/public/img/impermeabilizantes/membrana-liquida.webp" alt="Membrana liquida" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Membrana liquida</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$50.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS</h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card Impermeabilización 1-->
+  
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/img/impermeabilizantes/impermeabilizante20L-rodillo.webp" alt="Impermeabilizante Recuplast frente 20L" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Impermeabilizante Recuplast frente 20L</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$55.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 3 cuotas de $18.333,33</h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card Impermeabilización 2-->
+  
+            <div class="card">
+              <article class="card__article">
+                <div class="card__image-container">
+                  <img src="/public/img/impermeabilizantes/ImpermeabilizantePlaviconMuros_6.webp" alt="Plavicon muros" class="card__image">
+                </div>
+                <div class="card__content">
+                  <h2 class="card__heading">Plavicon muros</h2>
+                  <div class="card__description">
+                    <h3 class="card__description-h3">$50.000</h3>
+                    <h4 class="card__description-h4">Mismo precio en 6 cuotas de $8.333,33 </h4>
+                    <h4 class="card__description-h4-2">ENVIO GRATIS</h4>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- .card Impermeabilización 3-->
 
 
 
@@ -242,10 +296,39 @@
       </main>
 
       <footer class="footer">
-        <h3>soy un footer en un h3</h3>
-        <h3>soy un footer en un h3</h3>
-        <h3>soy un footer en un h3</h3>
-        <h3>soy un footer en un h3</h3>
+        <div class="footer__container">
+          <h4 class="footer__h4">Compañia</h4>
+            <div class="footer__ul">
+              <li>Nosotros</li>
+              <li>Nuestros servicios</li>
+              <li>Política de privacidad</li>
+              <li>Asociate</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">Ayuda</h4>
+            <div class="footer__ul">
+              <li>Preguntas</li>
+              <li>Compras</li>
+              <li>Envios</li>
+              <li>Estatus de orden</li>
+              <li>Pago</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">Tienda</h4>
+            <div class="footer__ul">
+              <li>Herramientas de mano</li>
+              <li>Pintura</li>
+              <li>Revestimientos</li>
+              <li>Iluminación</li>
+            </div>  
+        </div>
+        <div class="footer__container">
+          <h4 class="footer__h4">Seguinos</h4>
+           <div class="footer_social-link"></div>
+
+        </div>
       </footer>
 
     <script type="module" src="/main.js"></script>
