--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <header class="main-header">
+   <header class="main-header">
         <input type="checkbox" id="menu">
   
         <nav class="nav-bar">
@@ -47,7 +47,7 @@
           </div>
         </div> <!-- .search-bar -->
   
-      </header> <!-- main-header -->
+  </header> <!-- main-header -->
   
       <main>
         <section class="section-cards">
@@ -297,7 +297,7 @@
 
       <footer class="footer">
         <div class="footer__container">
-          <h4 class="footer__h4">Compañia</h4>
+          <h4 class="footer__h4">COMPAÑÍA</h4>
             <div class="footer__ul">
               <li>Nosotros</li>
               <li>Nuestros servicios</li>
@@ -306,7 +306,7 @@
             </div>  
         </div>
         <div class="footer__container">
-          <h4 class="footer__h4">Ayuda</h4>
+          <h4 class="footer__h4">AYUDA</h4>
             <div class="footer__ul">
               <li>Preguntas</li>
               <li>Compras</li>
@@ -316,7 +316,7 @@
             </div>  
         </div>
         <div class="footer__container">
-          <h4 class="footer__h4">Tienda</h4>
+          <h4 class="footer__h4">TIENDA</h4>
             <div class="footer__ul">
               <li>Herramientas de mano</li>
               <li>Pintura</li>
@@ -325,8 +325,13 @@
             </div>  
         </div>
         <div class="footer__container">
-          <h4 class="footer__h4">Seguinos</h4>
-           <div class="footer_social-link"></div>
+          <h4 class="footer__h4">SEGUINOS</h4>
+           <div class="footer__social-link">
+            <a href="https://es-la.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://x.com/?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
+           </div>
 
         </div>
       </footer>
