--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <a href="#" class="nav-bar__nav-link">ALTA</a>
             </li>
             <li class="nav-bar__nav-item">
-              <a href="#" class="nav-bar__nav-link">NOSOTROS</a>
+              <a href="/views/nosotros.html" target="_self" class="nav-bar__nav-link">NOSOTROS</a>
             </li>
             <li class="nav-bar__nav-item">
               <a href="/views/contacto.html" class="nav-bar__nav-link">CONTACTO</a> <!--! ACA LE PUSE EL LINK DE CONTACTO PARA VER LA PAG -->
@@ -52,7 +52,7 @@
       <main>
         <section class="section-cards">
           <header class="section-cards__header">
-            <h1 class="section-cards__header-h1">Artículos más vendidos!</h1>    
+            <h1 class="section-cards__header-h1">ARTÍCULOS MÁS VENDIDOS!</h1>    
             <p class="section-cards__header-p">Herramientas de mano</p>                    
           </header> <!-- .section-cards-->
         
@@ -168,10 +168,28 @@
   
         </section> <!-- .section-cards -->
 
+
+
+
+
+
+
+
         <section class="section-cards"> <!--! .section-cards2 COMIENZO-->
-          <header class="section-cards__header">
-            <h2 class="section-cards__header-h2">Pintura</h2>    
-          </header> <!-- .section-cards-->
+
+
+
+          <div class="separador">
+            <div class="separador__content">
+              <h2 class="separador__heading h2-aux">Pinturas</h2>
+            </div>
+            <div class="separador__image-container">
+              <img src="/img/pintura/sep-pintura.webp" alt="Pintura" class="separador__image">
+            </div>
+          </div>  <!-- .separador-->
+
+
+
           <div class="cards-container">
 
             <div class="card">
@@ -221,9 +239,25 @@
 
 
         <section class="section-cards"> <!-- .section-cards2 COMIENZO-->
-          <header class="section-cards__header">
-            <h2 class="section-cards__header-h2">Impermeabilización</h2>    
-          </header> <!-- .section-cards-->
+
+
+
+
+
+          <div class="separador">
+            <div class="separador__content">
+              <h2 class="separador__heading h2-aux">Impermeabilizantes</h2>
+            </div>
+            <div class="separador__image-container">
+              <img src="public/img/impermeabilizantes/impermeabilizacion.webp" alt="Pintura" class="separador__image">
+            </div>
+          </div>  <!-- .separador-->
+
+
+
+
+
+
           <div class="cards-container">
 
             <div class="card">
@@ -295,7 +329,7 @@
 
       </main>
 
-      <footer class="footer">
+      <footer class="footer">    <!-- FOOTER -->
         <div class="footer__container">
           <h4 class="footer__h4">COMPAÑÍA</h4>
             <div class="footer__ul">
@@ -334,7 +368,7 @@
            </div>
 
         </div>
-      </footer>
+      </footer>    <!-- FOOTER -->
 
     <script type="module" src="/main.js"></script>
 </body>
